2005-11-04  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/test/test_run.py: Add GetAnnotations() method.
	* qm/test/reader_test_run.py: Implement it.
	* qm/test/report.py: Rewrite report generation now supporting two formats.
	* qm/test/cmdline.py: Add '--flat' option to the 'report' command.
	* qm/test/doc/reference.xml: Document it.
	* share/xml/report.xslt: Adjust html-report generation to new format.
	
2005-11-04  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/classes/dejagnu_stream.py (DejaGNUReader.__NextOutcome):
	Ignore ERROR results.
	(DejaGNUReader.__UpdateResult): Don't repeat causes.  Don't use
	causes at all for non-combined results.

2005-10-25  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/test/result.py: Add refactored CheckExitStatus method.
	* qm/test/classes/command.py: Use it.
	* qm/test/classes/compiler_test.py: Prepare CompilerTest for reuse;
	general cleanup.
	* qm/test/classes/compilation_test.py: Add new SimpleCompilationTest
	and SimpleCompiledResource extensions.
	* qm/test/classes/classes.qmc: Register them.

2005-10-25  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/classes/dejagnu_stream.py (sets.Set): Don't import it.
	(DejaGNUReader.__init__): Don't set test_ids.

2005-10-25  Stefan Seefeld  <stefan@codesourcery.com>

	* share/xml/report.xslt: Fix handling of multiple test runs.

2005-10-24  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/classes/dejagnu_stream.py
	(DejaGNUStream.__UpdateResult): Fix typo.

	* qm/test/classes/dejagnu_stream.py (cgi): Import it.
	(re): Likewise.
	(sets.Set): Likewise.
	(DejaGNUReader): Add combined mode.  Add expectations-generation
	mode.

2005-10-23  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/base.py (load_outcomes): Adjust documentation.
	(load_results): Permit file parameter to be an extension
	descriptor.
	* qm/test/cmdline.py (QMTest.commands_spec): Add --output
	option to "qmtest summarize".
	(QMTest.__ExecuteSummarize): Use self.results_file_name.  Adjust