@@ -1,3 +1,8 @@
+2005-11-16  Stefan Seefeld  <stefan@codesourcery.com>
+
+	* qm/test/classes/compiler_table.py: Tolerate whitespace in context file.
+	* qm/test/classes/dejagnu_test.py: Use CompilerTable.target as host.
+
 2005-11-04  Stefan Seefeld  <stefan@codesourcery.com>
 
 	* qm/test/test_run.py: Add GetAnnotations() method.
